系统设置页面添加菜单标题输入框

--- a/app/system.html
+++ b/app/system.html
@@ -90,6 +90,10 @@
             <option value="random">随机切换</option>
           </select>
         </div>
+        <div class="form-group">
+          <label>定义菜单</label>
+          <input id="menutext" type="email" class="form-control" placeholder="输入自定义menu">
+        </div>
         <p>
           <span style="color:teal;">注：开启邮箱提醒需要用户手动去所属的邮箱客户端里设置pop服务开启。</span>
         </p>
